--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color:rgb(250, 247, 235);
+}
+nav{
+  font-family: "Josefin Sans";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p{
+  font-family: "Josefin Sans";
+}
+
+h1{
+  font-family: "Itim";
+}
+
+h2, h3, h3, h5{
+  font-family: "Noto Sans Symbols 2";
+}
+
+.fondoVerde{
+  background-color:rgb(0, 159, 108);
+}
+
+.footer{
+  background-color: violet;
+}
+
+@media (max-width: 992px) {
+
+  .posicion{
+   align-items: center; /*FALTA CENTRAR LOGO!*/
+  }
+}
+.letra{
+  color: black;
 }
