--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 *{
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 body{
   background-color:white;
@@ -54,3 +55,77 @@ footer{
 .letra{
   color: black;
 }
+
+
+.container__box{
+  max-width: 1100px;
+  margin: auto;
+  margin-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.box{
+  width: 218px;
+  height: 200px;
+  background-color:#ccabd8;
+  margin: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: pointer;
+  transition: all 300ms ease; /*pasa el cursor suave*/
+  position: relative;
+}
+
+.box:hover{
+  transform: scale(1.1); /*cuanto se adelanta*/
+  box-shadow: 0px 0px 30px -15px rgba(0,0,0,0.5); /*sombra de los costados de arriba de abajo y color de sombra*/
+  background: #055b56; /*paso el cursor y cambia de color*/
+  z-index: 1; /*para resolver cual se pone encima y cual no y no quede feo a la vista*/
+
+}
+
+.box i{
+  font-size: 60px;
+  color:#cec9d1;
+}
+
+.box:hover i{
+  color:white;
+}
+
+.box h5{
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: white;
+}
+
+.box:hover h5{
+  color:#fff;
+  opacity: 0;
+}
+
+.box h4{
+  text-transform: uppercase; /*se transforma en mayuscula*/
+  font-size: 18px;
+  color:#fff;
+  position: absolute;
+  bottom: 50px;
+  filter: blur(5px); /*desenfoca*/
+  opacity: 0; /*para q se oculte*/
+}
+
+.box:hover h4{
+  font-size: 14px;
+  opacity: 1;
+  filter: blur(0px);
+  color: white;
+  transition: all 600ms ease;
+}
+
+
+
+
